add_subdirectory(binaries_op)
add_subdirectory(config)
add_subdirectory(data_provider)
add_subdirectory(dbsync)
add_subdirectory(error_messages)
add_subdirectory(hashHelper)
add_subdirectory(mem_op)
add_subdirectory(logger)
add_subdirectory(networkHelper)
add_subdirectory(pal)
add_subdirectory(privsep_op)
add_subdirectory(pthreads_op)
add_subdirectory(randombytes)
add_subdirectory(regex_op)
add_subdirectory(sqliteWrapper)
add_subdirectory(time_op)
add_subdirectory(utils)
add_subdirectory(version_op)

if(BUILD_TESTS)
    enable_testing()
endif()
