add_subdirectory(binaries_op)
add_subdirectory(config)
add_subdirectory(data_provider)
add_subdirectory(dbsync)
add_subdirectory(error_messages)
if(NOT MSVC)
add_subdirectory(file_op)
endif()
add_subdirectory(filesystem_wrapper)
add_subdirectory(hashHelper)
add_subdirectory(logger)
add_subdirectory(mem_op)
add_subdirectory(networkHelper)
add_subdirectory(pal)
add_subdirectory(privsep_op)
add_subdirectory(pthreads_op)
add_subdirectory(randombytes)
add_subdirectory(regex_op)
add_subdirectory(sqliteWrapper)
add_subdirectory(time_op)
add_subdirectory(utils)

if(BUILD_TESTS)
    enable_testing()
endif()
