add_subdirectory(byteArrayHelper)
add_subdirectory(cmdHelper)
add_subdirectory(config)
add_subdirectory(data_provider)
add_subdirectory(dbsync)
add_subdirectory(deleterHelper)
add_subdirectory(encodingHelper)
add_subdirectory(file_helper)
add_subdirectory(globHelper)
add_subdirectory(hashHelper)
add_subdirectory(jsonHelper)
add_subdirectory(linuxHelper)
add_subdirectory(logger)
add_subdirectory(mapWrapper)
add_subdirectory(networkHelper)
add_subdirectory(pal)
add_subdirectory(pipelineHelper)
add_subdirectory(promiseHelper)
add_subdirectory(registryHelper)
add_subdirectory(sqliteWrapper)
add_subdirectory(stringHelper)
add_subdirectory(threadDispatcher)
add_subdirectory(timeHelper)
add_subdirectory(windowsHelper)

if(BUILD_TESTS)
    enable_testing()
endif()
